src/objects/inscor__PartsBase_API_Info__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>inscor__AuthURL__c</fullName>
        <label>AuthURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__Govgistics_Get_Url__c</fullName>
        <label>Govgistics_Get_Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__Import_Stock_URL__c</fullName>
        <description>https://apiservices.partsbase.com/api/InventoryImportStocks</description>
        <label>Import Stock URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__PartSearchURL__c</fullName>
        <label>PartSearchURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Search_Gov_Data_URL__c</fullName>
        <label>Part Search Gov Data URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__Pull_RFQ_Service_URL__c</fullName>
        <label>Pull RFQ Service URL</label>
        <type>Url</type>
    </fields>
    <label>PartsBase API Info</label>
</CustomObject>